--- a/index.html
+++ b/index.html
@@ -1,130 +1,113 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projektek</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .flip-card {
-      background-color: transparent;
-      width: 300px;
-      height: 300px;
-      perspective: 1000px;
-      margin-bottom: 30px;
-    }
-
-    .flip-card-inner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
-    }
-
-    .flip-card:hover .flip-card-inner {
-      transform: rotateY(180deg);
-    }
-
-    .flip-card-front, .flip-card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
-      border-radius: 10px;
-    }
-
-    .flip-card-front {
-      background-color: #f8f9fa;
-      color: black;
-    }
-
-    .flip-card-back {
-      background-color: #007bff;
-      color: white;
-      transform: rotateY(180deg);
-    }
-
-    .flip-card-back a {
-      color: black !important; /* Gomb szövege fekete */
-      text-decoration: none;
-    }
-
-    .flip-card-back .btn-light {
-      background-color: white;
-      border-color: white;
-    }
-    /* Kép margók */
-    .flip-card-front img {
-      width: calc(100% - 20px); /* 10px margó mindkét oldalra */
-      margin: 0 10px;
-    }
-  </style>
-  <script type="text/javascript">
-    if (!Array.isArray(window.qbOptions)) {
-      window.qbOptions = []
-    }
-    window.qbOptions.push({"baseUrl":"https://botsrv2.com","use":"NePdxmoq7YEj8K6Q/MnyjZrgzzymdv40x"});
-  </script>
-  <script type="text/javascript" src="https://static.botsrv2.com/website/js/widget2.js" crossorigin="anonymous" defer data-no-minify="1" data-cfasync="false"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projekt Kártyák</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card {
+            perspective: 1000px;
+            width: 100%;
+            height: 300px; /* Magasság beállítása */
+        }
+        .card-inner {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+        }
+        .card-front, .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+        }
+        .card-back {
+            transform: rotateY(180deg);
+            display: flex; /* Középre igazítás */
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .card:hover .card-inner {
+            transform: rotateY(180deg);
+        }
+    </style>
+    <script type="text/javascript">
+        if (!Array.isArray(window.qbOptions)) {
+          window.qbOptions = []
+        }
+        window.qbOptions.push({"baseUrl":"https://botsrv2.com","use":"NePdxmoq7YEj8K6Q/MnyjZrgzzymdv40x"});
+      </script>
+      <script type="text/javascript" src="https://static.botsrv2.com/website/js/widget2.js" crossorigin="anonymous" defer data-no-minify="1" data-cfasync="false"></script>
 </head>
-<body>
+<body class="bg-light">
 
 <div class="container mt-5">
-  <div class="row justify-content-center">
-    <!-- Első kártya -->
-    <div class="col-md-4">
-      <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front d-flex flex-column justify-content-center align-items-center">
-            <h3>Értékelő táblázat</h3>
-            <img src="kep1.png" alt="Projekt 1 Kép" class="img-fluid">
-          </div>
-          <div class="flip-card-back d-flex flex-column justify-content-center align-items-center">
-            <p>Ez egy értékelő rendszer, amely segít a projektek kiértékelésében.</p>
-            <a href="https://docs.google.com/spreadsheets/d/1GfUCb7jC9tS3_JBU1HTpLYBVLR22i9kOks9pPo9KC4I/edit?gid=0#gid=0" class="btn btn-light">Megnyitás</a>
-          </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Értékelő táblázat</h5>
+                            <img src="kep1.png" class="card-img-top" alt="">
+                        </div>
+                    </div>
+                    <div class="card-back text-center">
+                        <div class="card-body">
+                            <p class="card-text">Ez egy értékelő rendszer, amely segít a projektek kiértékelésében. Tartalmazza a szükséges mutatókat, mint a határidők és a teljesítmény.</p>
+                            <a href="https://github.com/your-repo-1" class="btn btn-primary">Megnyitás</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Második kártya -->
-    <div class="col-md-4">
-      <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front d-flex flex-column justify-content-center align-items-center">
-            <h3>Elégedettségi kérdőív</h3>
-            <img src="kep2.png" alt="Projekt 2 Kép" class="img-fluid">
-          </div>
-          <div class="flip-card-back d-flex flex-column justify-content-center align-items-center">
-            <p>Ez egy kérdőív, amely az ügyfelek elégedettségét méri.</p>
-            <a href="https://github.com/Gergo272/elegedettsegi-kerdoiv" class="btn btn-light">Megnyitás</a>
-          </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Elégedettségi kérdőív</h5>
+                            <img src="kep2.png" class="card-img-top" alt="">
+                        </div>
+                    </div>
+                    <div class="card-back text-center">
+                        <div class="card-body">
+                            <p class="card-text">Ez egy kérdőív, amely az ügyfelek elégedettségét méri.</p>
+                            <a href="https://github.com/your-repo-2" class="btn btn-primary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Harmadik kártya -->
-    <div class="col-md-4">
-      <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front d-flex flex-column justify-content-center align-items-center">
-            <h3>Saját weboldal</h3>
-            <img src="kep3.png" alt="Projekt 3 Kép" class="img-fluid">
-          </div>
-          <div class="flip-card-back d-flex flex-column justify-content-center align-items-center">
-            <p>Ez egy személyes weboldal, ahol bemutatod a projektjeidet.</p>
-            <a href="https://github.com/Gergo272/sajat-weboldal" class="btn btn-light">Megnyitás</a>
-          </div>
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Saját weboldal</h5>
+                            <img src="kep3.png" class="card-img-top" alt="">
+                        </div>
+                    </div>
+                    <div class="card-back text-center">
+                        <div class="card-body">
+                            <p class="card-text">Ez egy személyes weboldal, ahol bemutatod a projektjeidet.</p>
+                            <a href="https://github.com/your-repo-3" class="btn btn-primary">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-
-  </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
