--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="card-back text-center">
                         <div class="card-body">
                             <p class="card-text">Ez egy értékelő rendszer, amely segít a projektek kiértékelésében. Tartalmazza a szükséges mutatókat, mint a határidők és a teljesítmény.</p>
-                            <a href="https://github.com/your-repo-1" class="btn btn-primary">Megnyitás</a>
+                            <a href="https://docs.google.com/spreadsheets/d/1DX7q8YhAFuwYLi_aw3oTX2wuN_qe5Wix/edit?usp=drive_web&ouid=111943244146867968095&rtpof=true" class="btn btn-primary">Megnyitás</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="card-back text-center">
                         <div class="card-body">
                             <p class="card-text">Ez egy kérdőív, amely az ügyfelek elégedettségét méri.</p>
-                            <a href="https://github.com/your-repo-2" class="btn btn-primary">GitHub</a>
+                            <a href="https://github.com/Gergo272/elegedettsegi-kerdoiv" class="btn btn-primary">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <div class="card-back text-center">
                         <div class="card-body">
                             <p class="card-text">Ez egy személyes weboldal, ahol bemutatod a projektjeidet.</p>
-                            <a href="https://github.com/your-repo-3" class="btn btn-primary">GitHub</a>
+                            <a href="https://github.com/Gergo272/sajat-weboldal" class="btn btn-primary">GitHub</a>
                         </div>
                     </div>
                 </div>
