--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="card-back text-center">
                         <div class="card-body">
                             <p class="card-text">Ez egy értékelő rendszer, amely segít a projektek kiértékelésében. Tartalmazza a szükséges mutatókat, mint a határidők és a teljesítmény.</p>
-                            <a href="https://docs.google.com/spreadsheets/d/1DX7q8YhAFuwYLi_aw3oTX2wuN_qe5Wix/edit?usp=drive_web&ouid=111943244146867968095&rtpof=true" class="btn btn-primary">Megnyitás</a>
+                            <a href="https://docs.google.com/spreadsheets/d/1GfUCb7jC9tS3_JBU1HTpLYBVLR22i9kOks9pPo9KC4I/edit?gid=0#gid=0" class="btn btn-primary">Megnyitás</a>
                         </div>
                     </div>
                 </div>
